@@ -1,5 +1,10 @@
 2003-01-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03683] interrupt in getNextPage()
+	* file.c (getNextPage): trap SIGINT
+
+2003-01-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03682] open null file on tab
 	* display.c (displayBuffer): if empty, clear()
 
@@ -6837,4 +6842,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.713 2003/01/24 17:34:36 ukai Exp $
+$Id: ChangeLog,v 1.714 2003/01/24 17:36:44 ukai Exp $
